[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gappy"
version = "1.0.0"
description = "A tool for simulating worse quality (mainly bacterial) genome assemblies."
readme = "README.md"
requires-python = ">=3.7"
license = {text = "MIT"}
authors = [
    {name = "Gappy Contributors"},
]
keywords = ["bioinformatics", "genomics", "assembly", "mutations", "gaps", "simulation"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "biopython>=1.79",
    "numpy>=1.21.0",
]

[project.urls]
Homepage = "https://github.com/yourusername/gappy"
Repository = "https://github.com/yourusername/gappy"
Issues = "https://github.com/yourusername/gappy/issues"
Documentation = "https://github.com/yourusername/gappy#readme"

[project.scripts]
gappy = "gappy:main"

[tool.setuptools]
py-modules = ["gappy"]

[tool.setuptools.packages.find]
where = ["."]
include = ["gappy*"]
exclude = ["tests*", "venv*"]
