[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gappy"
version = "1.0.0"
description = "A tool for simulating worse quality (mainly bacterial) genome assemblies."
readme = "README.md"
requires-python = ">=3.7"
license = {text = "BSD3"}
authors = [
    {name = "Rauf Salamzade"},
]
keywords = ["bioinformatics", "genomics", "assembly", "errors", "gaps", "simulation"]
dependencies = ["biopython>=1.79", "numpy>=1.21.0"]

[project.urls]
Homepage = "https://github.com/raufs/gappy"
Repository = "https://github.com/raufs/gappy"
Issues = "https://github.com/raufs/gappy/issues"

[project.scripts]
gappy = "gappy:main"

[tool.setuptools]
py-modules = ["gappy"]

[tool.setuptools.packages.find]
where = ["."]
include = ["gappy*"]
exclude = ["tests*", "venv*"]
